post part update

--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -15,12 +15,12 @@
     <div class="modal fade" id="nameModal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
-                <div class="modal-body">
+                <div class="modal-body" align="center">
                     <p>
                         <label for="theme_name">Theme Name</label><input type="text" id="theme_name">
                     </p>
                     <p>
-                        <label for="theme_description">Theme Description</label><textarea type="text" id="theme_description" rows="5"></textarea>
+                        <label for="theme_description">Theme Description</label><input type="text" id="theme_description">
                     </p>
                     <div class="col-sm-12">
                         <div class="col-sm-6"><p><input type="radio" value="1" id="theme_private">private</p></div>
