--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -32,7 +32,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary" data-dismiss="modal" id="export-image">Save changes</button>
+                    <button class="btn btn-info" data-dismiss="modal" id="export-image">Save changes</button>
                     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
                 </div>
             </div>
