oauth change to server

--- a/templates/index.html
+++ b/templates/index.html
@@ -334,7 +334,7 @@
         {% endif %}
 
         function oauth() {
-            location.href ="https://api.weibo.com/oauth2/authorize?client_id=2027959579&response_type=code&redirect_uri=127.0.0.1:8000/callback";
+            location.href ="https://api.weibo.com/oauth2/authorize?client_id=2027959579&response_type=code&redirect_uri=themer.chinacloudapp.cn/callback";
         }
 
     </script>
