--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -17,7 +17,7 @@
         <div class="col-md-12 user_info">
             <div class = "col-md-4"></div>
             <div class = "col-md-4" id = "user_headicon" sytle="align:center;">
-                {% avatar user.username 255 %}
+                {% avatar user.user.username 255 %}
             </div>
             <div class = "col-md-4"></div>
 
