--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -16,7 +16,7 @@
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    <form role="form">
+                    <form role="form" id="export-form">
                         <div class="form-group">
                             <label for="theme_name">Theme name</label>
                             <input class="form-control" id="theme_name">
@@ -26,8 +26,8 @@
                             <textarea class="form-control" id="theme_description" rows="3"></textarea>
                         </div>
                         <div class="form-group">
-                            <label class="radio-inline"><input type="radio" name="theme_private" id="theme_private" value="1">private</label>
-                            <label class="radio-inline"><input type="radio" name="theme_private" id="theme_private" value="0" checked="checked">public</label>
+                            <label class="radio-inline"><input type="radio" name="theme_private" value="1">private</label>
+                            <label class="radio-inline"><input type="radio" name="theme_private" value="0" checked="checked">public</label>
                         </div>
                     </form>
                 </div>
