--- a/templates/timeline/post.html
+++ b/templates/timeline/post.html
@@ -25,11 +25,11 @@
 <div class=" row col-lg-5 col-lg-offset-2" name="commentfield">
     {% for comment in post.comments.all%}
     <div class = "portfolio-item col-md-12">
-        <div class = "col-md-2">
-        {% avatar comment.user.user.username 60 class="img-round" id="user_avatar" %}
+        <div class = "col-md-2" style="cursor: pointer" onclick="jump2profile('{{ post.user.id }}')" >
+        {% avatar comment.user.user.username 60 class="img-round" id="user_avatar"%}
         </div>
         <div class = "col-md-10">
-            <div class = "col-md-7"><label style = "margin-left:10px"> {{ comment.user.username }} </label></div>
+            <div class = "col-md-7"><label style = "cursor: pointer; margin-left:10px" onclick="jump2profile('{{ comment.user.id }}')"> {{ comment.user.username }} </label></div>
             <div class = "col-md-5"style = "margin-right:-20px" align="right"><p class="text-muted" style = "font-style: italic;">{{ comment.time|date:"d M Y" }}</p></div>
             <div class = "col-md-12"><p style = "margin-left:10px" >{{ comment.content }}</p></div>
         </div>
@@ -39,8 +39,8 @@
 </div>
 <div class="col-lg-5" name="infofield" style="margin-left: -100px;">
     <div class = "col-lg-12 row">
-        <div align="center" id = "poster_img">{% avatar post.user.user.username 255 %}</div>
-        <h3 align="center" id = "poster_name">{{post.user.username}}</h3>
+        <div align="center" id = "poster_img" style="cursor: pointer" onclick="jump2profile('{{ post.user.id }}')">{% avatar post.user.user.username 255 %}</div>
+        <h3 align="center" id = "poster_name" style="cursor: pointer" onclick="jump2profile('{{ post.user.id }}')">{{post.user.username}}</h3>
     </div>
 </div>
 {% endblock %}
