change to min.js

--- a/templates/theme/apply_theme.html
+++ b/templates/theme/apply_theme.html
@@ -47,8 +47,8 @@
 {% endblock %}
 
 {% block script %}
-    <script src={% static "js/PhotoEditorSDK.js" %}></script>
-    <script src={% static "js/PhotoEditorReactUI.js" %}></script>
+    <script src={% static "js/PhotoEditorSDK.min.js" %}></script>
+    <script src={% static "js/PhotoEditorReactUI.min.js" %}></script>
     <script src={% static "js/theme.js" %}></script>
 
     <script>
