--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -42,8 +42,8 @@
 
 
 {% block script %}
-    <script src={% static "js/PhotoEditorSDK.js" %}></script>
-    <script src={% static "js/PhotoEditorReactUI.js" %}></script>
+    <script src={% static "js/PhotoEditorSDK.min.js" %}></script>
+    <script src={% static "js/PhotoEditorReactUI.min.js" %}></script>
     <script src={% static "js/theme.js" %}></script>
     <script src={% static "js/application.js" %}></script>
 
