--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                         <img src={% static "img/Unknown.jpeg" %} class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>downton</h4>
+                        <h4>Downtown</h4>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
