--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -10,7 +10,7 @@
 
     <title>Picature - Share You Photos and Themes</title>
 
-    <link rel="shortcut icon" type="image/png" href={% static "favicon.png"%}/>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
